--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -35,47 +35,47 @@
         <section>
             <ul>
                 <li>
-                    <img src="/images/notebook.jpg" alt="">
+                    <img src="/images/notebook.jpg" alt="Notebook">
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="/images/basketball.jpg" alt="basketball">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="/images/fisher.jpg" alt="fisher">
                     <h2>Ресторан Seafood</h2>
                     <p>Додаток</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="/images/headphone.jpg" alt="headphone">
                     <h2>Проєкт Prime</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="/images/box.jpg" alt="box">
                     <h2>Проєкт Boxes</h2>
                     <p>Додаток</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="/images/monitor.jpg" alt="monitor">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="/images/book.jpg" alt="book">
                     <h2>Видання Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="/images/eticketcka.jpg" alt="eticketcka">
                     <h2>Проєкт LAB</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="/images/noteeebook.jpg" alt="noteeebook">
                     <h2>Growing Business</h2>
                     <p>Додаток</p>
                 </li>
