--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,8 +10,8 @@
         <a href="/index.html"><span>Web</span>Studio</a>
         <nav>
       <ul>
-        <li><a href="/index.html">Студія</a></li>
-        <li><a href="./pages/portfolio.html">Портфоліо</a></li>
+        <li><a href="../index.html">Студія</a></li>
+        <li><a href="../pages/portfolio.html">Портфоліо</a></li>
         <li><a href="#">Контакти</a></li>
       </ul>
         </nav>
